# hermes-voice

./: .gitignore  .release-ios.env.example  AGENTS.md  README.md
.docs/ai/: current-state.md  decisions.md  roadmap.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  _http.py  acp_client.py  approvals.py  audio_store.py  claude_sdk_turn.py  config.py  harness.py  hermes.py  main.py  mcp_schedules.py  mdns.py  models.py  narration.py  push.py  schedules.py  session_audit.py  sessions.py  speakable.py
backend/app/adapters/: __init__.py  claude.py  codex.py  opencode.py
backend/app/stt/: __init__.py  elevenlabs_scribe.py  groq_stt.py  local_whisper.py  mock.py  openai_stt.py
backend/app/tts/: __init__.py  elevenlabs.py  mock.py  openai_tts.py  piper_tts.py
backend/docs/: schedules-setup.md
backend/launchd/: dev.finklea.harnessvoice.backend.plist  dev.finklea.harnessvoice.cert-renew.plist  dev.finklea.hermesvoice.backend.plist  dev.finklea.hermesvoice.cert-renew.plist  renew-cert.sh
backend/scripts/: make_chime.py  make_icon.py
backend/tests/: conftest.py  test_acp_client.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_opencode.py  test_approvals.py  test_audio.py  test_audio_store.py  test_claude_sessions.py  test_harness.py  test_health.py  test_mcp_schedules.py  test_mdns.py  test_narration.py  test_providers.py  test_schedules.py  test_security.py  test_speakable.py  test_stream.py  test_text.py  test_voices.py
backend/tests/fixtures/: speakable_cases.json
ios/: README.md
scripts/: release.sh
(+80 files in other folders)
